[gd_scene load_steps=12 format=3 uid="uid://be5ddwgj1jdnc"]

[ext_resource type="Script" path="res://Scripts/Weapons/Towers/MagicMissle.gd" id="1_i6dt6"]
[ext_resource type="Resource" uid="uid://dquy23344dntp" path="res://Scripts/UI/Inventory/Towers/EyeTower.tres" id="2_aqcnv"]
[ext_resource type="Texture2D" uid="uid://2qj677jccsuj" path="res://Assets/Weapons/Towers/eye_tower.png" id="3_qtyod"]
[ext_resource type="Script" path="res://Scripts/Weapons/Towers/EyeTowerprojectilePool.gd" id="4_nb3ml"]
[ext_resource type="Texture2D" uid="uid://byc3c2jfr3l0c" path="res://Assets/Lightmap beam.png" id="5_72pnk"]
[ext_resource type="Script" path="res://Scenes/objects/fire_light.gd" id="6_fqmol"]

[sub_resource type="CircleShape2D" id="CircleShape2D_seo2y"]
radius = 96.1873

[sub_resource type="Gradient" id="Gradient_r1gml"]
offsets = PackedFloat32Array(0, 0.628099)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_kget7"]
gradient = SubResource("Gradient_r1gml")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_r47hu"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_hnr6w"]
noise = SubResource("FastNoiseLite_r47hu")

[node name="EyeTower" type="CharacterBody2D"]
position = Vector2(245, 161)
collision_layer = 4
collision_mask = 2
input_pickable = true
script = ExtResource("1_i6dt6")
itemResource = ExtResource("2_aqcnv")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("3_qtyod")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_seo2y")

[node name="RayCast2D" type="RayCast2D" parent="."]
z_index = -1
position = Vector2(-1, -13)
exclude_parent = false
target_position = Vector2(500, 0)
collision_mask = 0

[node name="Projectiles" type="Node2D" parent="."]
position = Vector2(-1, 0)
script = ExtResource("4_nb3ml")

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(-1, -13)

[node name="ShootBullet" type="Timer" parent="."]
autostart = true

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(-0.687042, -12.7961)
rotation = -0.000217287
scale = Vector2(15.9624, -9.17401)
color = Color(0.995111, 0.768059, 0.731092, 1)
energy = 2.0
texture = ExtResource("5_72pnk")
offset = Vector2(16.0881, -0.119736)

[node name="AOE LIGHT" type="PointLight2D" parent="."]
z_index = 1
position = Vector2(-4, -22)
scale = Vector2(20.0659, 20.7151)
color = Color(1, 0.0823529, 0.176471, 1)
energy = 0.5
range_z_max = 1
shadow_enabled = true
texture = SubResource("GradientTexture2D_kget7")
texture_scale = 0.25
script = ExtResource("6_fqmol")
noise = SubResource("NoiseTexture2D_hnr6w")

[connection signal="timeout" from="ShootBullet" to="." method="_on_shoot_bullet_timeout"]
